[gd_scene load_steps=2 format=3 uid="uid://console001"]

[ext_resource type="Script" path="res://scripts/ui/console_ui.gd" id="1"]

[node name="Console" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="ConsolePanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -600.0
offset_top = -400.0
offset_right = 600.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ConsolePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="ConsolePanel/VBoxContainer"]
layout_mode = 2
text = "Developer Console (Press ` to close)"
horizontal_alignment = 1

[node name="OutputLog" type="RichTextLabel" parent="ConsolePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
scroll_following = true

[node name="InputField" type="LineEdit" parent="ConsolePanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter command..."
